--- a/css/style.css
+++ b/css/style.css
@@ -8,55 +8,95 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #fbfbfb;
+    background: rgba(26, 11, 46, 1);
+    font-family: 'Inter', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-  color: #222222;
+    color: rgba(255, 255, 255, 1);
+    font-family: inter, sans-serif;
+}
+h1{
+    font-size: 60px;
+    font-weight: 800;
+    line-height: 73px;
+}
+h2{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 39px;
+}
+h3{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
 }
 p {
-  color: #627382;
+    color: rgba(255, 255, 255, 0.8);
+    font-family: inter, sans-serif;
+    line-height: 19px;
+    font-size: 16px;
+    font-weight: 400;
+}
+a{
+ color: rgba(255, 255, 255, 1); 
+}
+.color-green{
+    color: rgba(0, 255, 136, 1);
 }
 .btn {
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
     cursor: pointer;
-    border: 1px solid;
     padding: 12px 16px;
-    border-radius: 5px;
+    border-radius: 100px;
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
     font-family: inter, sans-serif;
     transition: all 0.3s ease;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    column-gap: 10px;
     letter-spacing: 0.5px;
 }
 .btn img {
     margin-bottom: -5px;
-    width: 24px;
+    width: 20px;
+}
+.icon {
+    width: 20px;
+    height: 20px;
+    margin-bottom: -5px;
 }
 .btn-primary {
-    background-color: #30B868;
-    border-color: #30B868;
+    background: linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
+    border-color: transparent;
     color: white;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    fill: White;
+}
+.btn-primary:hover {
+    background: transparent;
+    box-shadow: 0 0px 0px 2px rgba(145, 0, 248, 0.8);
 }
 .btn-secondary {
     background-color: transparent;
-    color: #fff;
-    border-color: #fff;
+    color: rgba(0, 255, 136, 1);
+    border: 1px solid;
+    border-color: rgba(0, 255, 136, 1);
 }
-.btn-primary:hover,
+
 .btn-secondary:hover {
-    background-color: #F95555;
-    border-color: #F95555;
+    background-color: rgba(0, 255, 136, 1);
+    color: rgba(26, 11, 46, 1);
 }
 .container{
-    max-width: 1330px;
+    max-width: 1338px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 16px;
 }
 
 /*================
@@ -69,9 +109,10 @@ header .inner-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 16px;
 }
 header .logo-wrapper img {
-    width: 140px;
+    width: 120px;
 }
 header .navigation-wrapper ul {
     display: flex;
@@ -81,7 +122,6 @@ header .navigation-wrapper ul {
 
 header .navigation-wrapper ul li a {
     text-decoration: none;
-    color: #222222;
     font-weight: 500;
     font-size: 16px;
     font-family: inter, sans-serif;
@@ -96,8 +136,7 @@ header .navigation-wrapper ul li a:hover {
  Hero Section Styles
  =================== */
 .hero-section {
-    background-image: linear-gradient(rgba(0, 25, 49, 0.2)), 
-    url('../images/hero-bg.png');
+    background-image: url('../images/hero-bg.png');
     background-size: cover;
     background-position: center;
     height: 75vh;
