--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,12 @@ p {
     font-weight: 400;
 }
 a{
- color: rgba(255, 255, 255, 1); 
+    color: rgba(255, 255, 255, 1); 
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    font-family: inter, sans-serif;
+    transition: all 0.3s ease;
 }
 .color-green{
     color: rgba(0, 255, 136, 1);
@@ -119,16 +124,8 @@ header .navigation-wrapper ul {
     list-style-type: none;
     column-gap: 32px;
 }
-
-header .navigation-wrapper ul li a {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 16px;
-    font-family: inter, sans-serif;
-    transition: all 0.3s ease;
-}
 header .navigation-wrapper ul li a:hover {
-    border-bottom: 1px solid #222222;
+    border-bottom: 1px solid white;
 }
 
 
