--- a/css/style.css
+++ b/css/style.css
@@ -499,3 +499,34 @@ header .navigation-wrapper ul li a:hover {
  /*==================
  Footer Section Styles
  =================== */
+.footer {
+    background-image: url('../images/footer-bg.png');
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    padding: 120px 0;
+    margin: auto;
+    text-align: center;
+}
+.footer .inner-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
+.footer .footer-logo-wrapper img {
+    max-width: 410px;
+}
+.footer-social-links ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+.footer-social-links ul li img{
+ margin-bottom: -3px;
+ padding-right: 4px;
+}
